[package]
name = "libactr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"
authors = ["Actor-RTC Contributors"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "actr"

[dependencies]
# actr dependencies (use local path for development)
actr-protocol = { git = "https://github.com/actor-rtc/actr", rev = "0e4ca6c8a7786c6ddd49dd7d6c4d862aa264177b" }
actr-framework = { git = "https://github.com/actor-rtc/actr", rev = "0e4ca6c8a7786c6ddd49dd7d6c4d862aa264177b" }
actr-runtime = { git = "https://github.com/actor-rtc/actr", rev = "0e4ca6c8a7786c6ddd49dd7d6c4d862aa264177b" }
actr-config = { git = "https://github.com/actor-rtc/actr", rev = "0e4ca6c8a7786c6ddd49dd7d6c4d862aa264177b" }

# UniFFI
uniffi = { version = "0.30.0", features = ["tokio"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
bytes = "1.10"

# Utilities
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
async-trait = "0.1"
parking_lot = "0.12"
futures-util = "0.3.31"

[features]
default = []
