[package]
name = "libactr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"
authors = ["Actor-RTC Contributors"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "actr"

[dependencies]
# actr dependencies (use local path for development)
actr-protocol = { git = "https://github.com/actor-rtc/actr", rev = "09757bb556045d2b85edf4812c12db2afd3d2dd5" }
actr-framework = { git = "https://github.com/actor-rtc/actr", rev = "09757bb556045d2b85edf4812c12db2afd3d2dd5" }
actr-runtime = { git = "https://github.com/actor-rtc/actr", rev = "09757bb556045d2b85edf4812c12db2afd3d2dd5" }
actr-config = { git = "https://github.com/actor-rtc/actr", rev = "09757bb556045d2b85edf4812c12db2afd3d2dd5" }

# UniFFI
uniffi = { version = "0.30.0", features = ["tokio"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
bytes = "1.10"

# Utilities
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-android = "0.2"
url = "2.5"
async-trait = "0.1"
parking_lot = "0.12"
futures-util = "0.3.31"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"

[features]
default = []
