[package]
name = "libactr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"
authors = ["Actor-RTC Contributors"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "actr"

[dependencies]
# actr dependencies (pin to latest main commit)
actr-protocol = { git = "https://github.com/actor-rtc/actr", rev = "ee1ccc800ca9a493e08214415d04077e7dc7cf95" }
actr-framework = { git = "https://github.com/actor-rtc/actr", rev = "ee1ccc800ca9a493e08214415d04077e7dc7cf95" }
actr-runtime = { git = "https://github.com/actor-rtc/actr", rev = "ee1ccc800ca9a493e08214415d04077e7dc7cf95", features = [
    "opentelemetry",
] }
actr-config = { git = "https://github.com/actor-rtc/actr", rev = "ee1ccc800ca9a493e08214415d04077e7dc7cf95", features = [
    "opentelemetry",
] }

# UniFFI
uniffi = { version = "0.30.0", features = ["tokio"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
bytes = "1.10"

# Utilities
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-android = "0.2"
tracing-oslog = { version = "0.2", optional = true }
url = "2.5"
async-trait = "0.1"
parking_lot = "0.12"
futures-util = "0.3.31"

# OpenTelemetry
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"

[features]
default = []
opentelemetry = []
macos-oslog = ["tracing-oslog"]
